# tauri-ips

./: .env  .env.development  .env.production  .eslintignore  .eslintrc.cjs  .gitignore  .postcssrc.cjs  README.md  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: publish.yml  tauri-release.yml
public/: loader.html
src/: App.vue  error.js  main.js  permission.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: config.yml  log.yml
src-tauri/dev/: config.yml
src-tauri/src/: api_server.rs  config.rs  front_data_type.rs  lib.rs  log_set.rs  main.rs  msg_type.rs  nc_signal.rs  setup.rs  tcp_client.rs  utils.rs  ws_server.rs
src/assets/static/: index.js
src/common/: database.js  piniaPersist.js
src/common/socketClient/: socket.js
src/direactive/: clickoutside.js  myInput.js  rules.js
src/hooks/: useApi.js  useSignalController.js
src/i18n/: index.js
src/layout/: aside.vue  footer.vue  header.vue  index.vue
src/layout/languages/: en.js  zh-cn.js
src/router/: collector.js  dashboard.js  history.js  index.js  loadRouter.js  router.js  strategy.js
src/store/: useChart.js  useLayout.js  useMenu.js  useRoute.js  useSignals.js  useSys.js
src/styles/: Variables.scss  common.scss  index.scss
src/utils/: authEnum.js  common.js  enum.js  filter.js  notification.js  performance.js  rulesEnum.js  timer.js  validate.js
src/views/: 404.vue
src/views/collector/: add.vue  index.vue  style.scss  view.vue
src/views/dashboard/: index.vue
src/views/record/: dataDetails.vue  (+2 more)
src/worker/: monitor.js
(+15 files in other folders)
