[package]
name = "arm-ips"
version = "0.1.0"
description = "ARM IPS"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ips_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "socks"] }
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
socketioxide = "0.15.0"
axum = "0.7.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytemuck = { version = "1.20.0", features = ["derive"] }
bincode = "1.3.3"
byteorder = "1.5.0"
lazy_static = "1.5.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
